--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -69,3 +69,9 @@ a{
     line-height: 100px;
     border-bottom: 8px solid $color-tertiary;
 }
+
+.loader-typo{
+    font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
+    color:white;
+    font-size: 72px;
+  }
