--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -1,6 +1,19 @@
 .menu-pannel{
     display: flex;
     flex-direction: column;
+    visibility: hidden;
+    :nth-child(1){
+        animation: unfold 3s 1s forwards;
+    }
+    :nth-child(2){
+        animation: unfold 3s 1.3s forwards;
+    }
+    :nth-child(3){
+        animation: unfold 3s 1.6s forwards;
+    }
+    :nth-child(4){
+        animation: unfold 3s 1.9s forwards;
+    }
 }
 
 .plate{
@@ -18,8 +31,7 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-    }
-    
+    }   
 }
 
 .plate__txt{
@@ -29,4 +41,15 @@
 .price--align{
     margin-top: 80px;
     margin-right: 40px;
+}
+
+@keyframes unfold {
+    from{
+        opacity: 0;
+        visibility: hidden;
+    }
+    to{
+        opacity: 1;
+        visibility: visible;
+    }
 }
