--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -31,7 +31,11 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-    }   
+    }
+
+    &:active{
+        
+    }
 }
 
 .plate__txt{
@@ -47,9 +51,11 @@
     from{
         opacity: 0;
         visibility: hidden;
+        transform: translateX(10px);
     }
     to{
         opacity: 1;
         visibility: visible;
+        transform: translateX(0px);
     }
 }
