--- a/public/css/style.css
+++ b/public/css/style.css
@@ -538,18 +538,36 @@ p.place-restaurant {
     transform: translateX(0px);
   }
 }
+.heart-container {
+  position: relative;
+}
+
+.heart-animated {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  transition: all 2s;
+  font-size: 3px;
+}
+.heart-animated:hover {
+  font-size: 64px;
+  opacity: 1;
+  top: 0;
+  left: 0;
+}
+
 .fav-heart--color {
-  color: rgba(53, 53, 53, 0.8);
+  color: red;
 }
 
-.fav-heart--background {
-  background-color: radial-gradient(#FF79DA, #9356DC);
-  transition: all 4s;
-}
-.fav-heart--background:hover {
-  background-color: radial-gradient(#FF79DA, #9356DC);
-}
-
+/*.fav-heart--background{
+    background-color: radial-gradient($color-secondary, $color-primary);
+    transition: all 4s;
+    &:hover{
+        background-color: radial-gradient($color-secondary, $color-primary);
+    }
+}*/
 footer {
   display: flex;
   flex-flow: column nowrap;
