--- a/sass/composants/_favoriteHeart.scss
+++ b/sass/composants/_favoriteHeart.scss
@@ -1,5 +1,6 @@
 .heart-container{
     position: relative;
+    cursor: pointer;
 }
 
 .heart-animated{
@@ -20,22 +21,11 @@
 }
 
 .fav-heart--color{
-    background-color: black;
-    background-image: radial-gradient( 
-        #FF79DA 0%,
-        #9356DC 85%
-        );
+    background-color: white;
+    background-image: radial-gradient(#FF79DA 0%,#9356DC 85%);
 
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
 }
-
-/*.fav-heart--background{
-    background-color: radial-gradient($color-secondary, $color-primary);
-    transition: all 4s;
-    &:hover{
-        background-color: radial-gradient($color-secondary, $color-primary);
-    }
-}*/
