--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -44,14 +44,15 @@
     }
     &:hover{
         .plate__valid{
-            visibility: visible;
-            width: 25%;
+            width: 20%;
             border-radius: 0 60px 60px 0;
             margin: -25px;
             background-color: rgba($color-tertiary, 1);
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+            animation: scrollLeft .8s forwards;
             
             & > i{
                 color: white;
@@ -83,8 +84,21 @@
     }
 }
 
+@keyframes scrollLeft{
+    from{
+        width: 0%;
+        transform: translateX(20%);
+        
+    }
+    to{
+        width: 25%;
+        transform: translateX(0);
+    }
+}
+
 @keyframes rolling{
     to{
         transform: rotateZ(360deg);
     }
 }
+
