--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,7 +523,13 @@ p.place-restaurant {
   overflow: hidden;
 }
 .plate .plate-details .plate__price {
-  width: 20%;
+  width: 10%;
+  position: relative;
+}
+.plate .plate-details .plate__price p {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 .plate .plate__valid i {
   color: transparent;
@@ -531,7 +537,7 @@ p.place-restaurant {
 .plate:hover .plate__valid {
   width: 20%;
   border-radius: 0 60px 60px 0;
-  margin: -25px;
+  margin: -25px -25px -25px 20px;
   background-color: #99e2d0;
   display: flex;
   justify-content: center;
