--- a/public/css/style.css
+++ b/public/css/style.css
@@ -517,10 +517,16 @@ p.place-restaurant {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .plate .plate-details .plate__txt {
-  width: auto;
+  max-width: 85%;
+  padding: 5px;
+}
+.plate .plate-details .plate__txt p {
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 .plate .plate-details .plate__price {
   width: 10%;
