--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -31,9 +31,16 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
+        white-space: nowrap;
+        overflow: hidden;
+
         .plate__txt{
-            width: auto;
-            overflow: hidden;
+            max-width: 85%;
+            padding: 5px;
+            p{
+                overflow: hidden;
+                text-overflow: ellipsis;
+            } 
         }
         .plate__price{
             width: 10%;
