--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -35,7 +35,7 @@
         overflow: hidden;
 
         .plate__txt{
-            max-width: 85%;
+            max-width: 88%;
             padding: 5px;
             p{
                 overflow: hidden;
@@ -43,11 +43,12 @@
             } 
         }
         .plate__price{
-            width: 10%;
+            width: 20%;
+            padding-left: 25px;
             position: relative;
             p{
                 position: absolute;
-                bottom: 0; right: 0;
+                bottom: 0; right: -9px;
             }
         }
     }
