--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,13 @@
-// les couleurs types //
+// Les breakpoints //
+
+$breakpoint: (
+    mobile: 600px,
+    tablet: 768px,
+    desktop: 992px,
+);
+
+
+// Les couleurs types //
 
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
