--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,18 +18,20 @@ h1{
 }
 
 h2{
-    font-size: 60px;
+    //font-size: 60px;
+    font-size: 28px;
     color: $color-blackened;
     margin: 0;
 }
 
 h4{
-    font-size: 40px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 p{
-    font-size: 40px;
+    //font-size: 40px;
+    font-size: 16px;
     color: $color-blackened;
 }
 
