--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -1,88 +1,109 @@
-.gal{
+.gal {
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
+    margin-top: 25px;
 }
 
-.picture{
+.picture {
     width: 100px;
 }
 
-.card{
-    width : 100%;
-    height: 600px;
-    border-radius: $border45;
+.card {
+    width: 100%;
+    //height: 600px;
+    //border-radius: $border45;
+    //border-radius: 20px 20px 0 0;
+    border-radius: 20px;
     background-color: $color-white;
     box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.2);
-    margin-bottom: 50px;
-    &:hover{
-        transform: scale(1.1); 
+    //margin-bottom: 50px;
+    margin-bottom: 20px;
+
+    &:hover {
+        transform: scale(1.1);
     }
 }
 
-.new{
-    width: 230px;
-    height: 75px;
-    border-radius: 8px;
+.new {
+    //width: 230px;
+    //height: 75px;
+    padding: 8px 20px;
+    border-radius: 3px;
+    //border-radius: 8px;
     background-color: $color-tertiary;
     position: absolute;
-    top: 30px; right: 30px;
-    p.new--font{
+    //top: 30px; right: 30px;
+    right: 15px;
+    top: 15px;
+/*
+    p.new--font {
         display: flex;
         justify-content: center;
         font-weight: bold;
         color: #008d62;
-        margin: 15px 0 0 0;
-    }
+        //margin: 15px 0 0 0;
+    }*/
 }
 
-.card__pic{
-    height: 400px;
+.card__pic {
+    //height: 400px;
     position: relative;
-    .picture{
+    border-radius: 20px 20px 0 0;
+
+    .picture {
         width: 100%;
-        height: 400px;
+        //height: 400px;
+        height: 180px;
         object-fit: cover;
         object-position: bottom;
     }
 
-    .picture--center{
+    .picture--center {
         width: 100%;
-        height: 400px;
+        //height: 400px;
         object-fit: cover;
         object-position: center;
     }
 
-    .picture--roundedTop{
-        border-radius: $border45 $border45 0 0;
+    .picture--roundedTop {
+        //border-radius: $border45 $border45 0 0;
+
+        border-radius: 20px 20px 0 0;
     }
 }
 
-.card__text{
-    height: 200px;
+.card__text {
+    //  height: 200px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    line-height: 60px;
-    .text--column{
+    //line-height: 60px;
+
+    .text--column {
         width: 90%;
-        padding: 30px;
-        h4{
+        //padding: 30px;
+        padding: 20px;
+
+        h4 {
             margin: 0;
         }
     }
-    .icn-favorite{
+
+    .icn-favorite {
         width: 10%;
-        padding: $padding50;
+        //padding: $padding50;
+        padding: 20px;
         justify-content: center;
     }
 }
 
-p.place-restaurant{
-    margin: 0;
+p.place-restaurant {
+    //margin: 0;
+    margin: 5px 0 0 0 ;
     color: rgb($color-blackened, 0.8);
 }
 
-.photo__profil{
+.photo__profil {
     width: 100%;
 }
