--- a/sass/composants/_search.scss
+++ b/sass/composants/_search.scss
@@ -1,11 +1,13 @@
 input{
-    width: 40%;
-    height: 100px;
+    //width: 40%;
+    width: 140px;
+    //height: 100px;
     background-color: transparent;
     border: none;
     outline: none;
     text-align: left;
-    font-size: 40px;
+    //font-size: 40px;
+    font-size: 18px;
     font-weight: bold;
     padding: 0 0 0 25px;
     }
@@ -14,6 +16,7 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 60px;
 }
 
 #search{
