--- a/sass/composants/_sticker.scss
+++ b/sass/composants/_sticker.scss
@@ -1,67 +1,86 @@
-.pannel{
+.pannel {
     display: flex;
     flex-direction: column;
-    padding: 25px;
-    .sticker{
+    padding: 0px;
+
+    .sticker {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
-        height: 200px;
-        margin-bottom: 100px;
-        border-radius: 60px;
-        box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.3);
+        //height: 200px;
+        padding: 25px;
+        //margin-bottom: 100px;
+        margin-bottom: 20px;
+        //border-radius: 60px;
+        border-radius: 15px;
+        //box-shadow: 0 10px 50px 0 rgb($color-blackened, 0.3);
+        box-shadow: 1px 5px 15px 0px rgb($color-blackened, 0.3);
+        font-size: 16px;
     }
-    
-    .sticker--backGrey{
+
+    .sticker--backGrey {
         background-color: $color-whitened;
     }
-    .sticker:hover{
+
+    .sticker:hover {
         background-color: rgb($color-primary, 0.1);
         color: $color-primary;
         cursor: pointer;
-        .icon--stylized{
+
+        .icon--stylized {
             color: $color-primary;
             opacity: 1;
         }
     }
-    
-    .sticker--circle{
-        width: 80px;
-        height: 80px;
+
+    .sticker--circle {
+        //width: 80px;
+        //height: 80px;padding: 4px;
+        padding: 4px;
+        margin-right: 15px;
+        margin-left: -36px;
         position: relative;
-        left: -40px;
+        width: 1.2em;
+        //left: -40px;
         background-color: $color-primary;
-        border-radius: 50px;
+        //border-radius: 50px;
+        border-radius: 100%;
         display: flex;
-        .sticker--nbr{
+
+        .sticker--nbr {
             position: relative;
-            top: 20px; left: 27px;
+            //top: 20px;
+            //left: 27px;
             color: $color-white;
-            margin: 0;
+            //margin: 0;
+            margin: auto;
         }
     }
-    
-    .sticker__icon{
-        width: 40px;
-        height: 40px;
+
+    .sticker__icon {
+        //width: 40px;
+        //height: 40px;
         display: flex;
         justify-content: space-around;
         align-items: center;
-        margin: 0 50px 0 20px;
+        //        margin: 0 50px 0 20px;
+        margin: 0 16px 0 0px;
         color: $color-primary;
-        .icon--stylized{
+
+        .icon--stylized {
             color: $color-blackened;
             opacity: .5;
         }
     }
 
-    .sticker__text{
+    .sticker__text {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        .text--sizing{
+
+        .text--sizing {
             margin: 0;
-            font-weight: bold;
+            //font-weight: bold;
             text-align: center;
         }
     }
