--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,8 @@ footer{
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    padding: $padding50;
+    //padding: $padding50;
+    padding: 20px;
     background-color: $color-blackened;
     h3{
         font-size: 56px;
@@ -12,15 +13,18 @@ footer{
     }
     li{
         list-style-type: none;
+        padding-bottom: 8px;
     }
     a{
         text-decoration: none;
-        font-size: 40px;
+        //font-size: 40px;
+        font-size: 16px;
         color: white;
-        line-height: 70px;
+        //line-height: 70px;
         i{
-            width: 50px;
-            height: 50px;
+            //width: 50px;
+            //height: 50px;
+            padding-right: 10px;
         }
         &:hover{
             color: #9356DC;
