--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,20 +1,19 @@
 header {
     width: 100%;
-    height: 120px;
-    padding: 15px 0;
+    height: 50px;
+    padding: 10px 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: $color-white;
-    box-shadow: 0 0 15px 0 #838383;
+    box-shadow: 0 0 5px 0 #838383;
     position: relative;
+    img {
+      width: 200px;
+    }
   }
 
   .arrow--position{
     position: absolute;
-    left: 100px; top: 40px;
+    left: 20px; top: 15px;
   }
-
-  header img {
-    width: 200px;
-}
