--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ h2 {
 
 h4 {
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 p {
@@ -73,7 +73,7 @@ a {
 .loader-typo {
   font-family: "Shrikhand", cursive, Impact, Arial, Helvetica, Verdana;
   color: white;
-  font-size: 72px;
+  font-size: 44px;
 }
 
 header {
@@ -276,7 +276,6 @@ input {
   text-align: left;
   font-size: 18px;
   font-weight: bold;
-  padding: 0 0 0 25px;
 }
 
 form {
@@ -284,6 +283,9 @@ form {
   justify-content: center;
   align-items: center;
   height: 60px;
+}
+form i {
+  align-items: right;
 }
 
 #search {
@@ -397,6 +399,7 @@ button:hover {
 }
 .pannel .sticker__text .text--sizing {
   margin: 0;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -429,14 +432,10 @@ button:hover {
   position: absolute;
   right: 15px;
   top: 15px;
-  /*
-      p.new--font {
-          display: flex;
-          justify-content: center;
-          font-weight: bold;
-          color: #008d62;
-          //margin: 15px 0 0 0;
-      }*/
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  color: #008d62;
 }
 
 .card__pic {
@@ -465,7 +464,7 @@ button:hover {
 }
 .card__text .text--column {
   width: 90%;
-  padding: 20px;
+  padding: 15px;
 }
 .card__text .text--column h4 {
   margin: 0;
