--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,7 +26,7 @@ h2{
 
 h4{
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 900;
 }
 
 p{
@@ -75,5 +75,5 @@ a{
 .loader-typo{
     font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
     color:white;
-    font-size: 72px;
+    font-size: 44px;
   }
