--- a/sass/composants/_search.scss
+++ b/sass/composants/_search.scss
@@ -1,15 +1,11 @@
 input{
-    //width: 40%;
     width: 140px;
-    //height: 100px;
     background-color: transparent;
     border: none;
     outline: none;
     text-align: left;
-    //font-size: 40px;
     font-size: 18px;
     font-weight: bold;
-    padding: 0 0 0 25px;
     }
 
 form{
@@ -17,6 +13,9 @@ form{
     justify-content: center;
     align-items: center;
     height: 60px;
+    i{
+        align-items: right;
+    }
 }
 
 #search{
