--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,39 +14,37 @@ body{
 h1{
     font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
     color: black;
-    font-size: 68px;
+    font-size: 28px;
+    margin: 0;
 }
 
 h2{
-    //font-size: 60px;
     font-size: 28px;
     color: $color-blackened;
     margin: 0;
 }
 
-h4{
+h3{
     font-size: 16px;
-    font-weight: 900;
-}
-
-p{
-    //font-size: 40px;
-    font-size: 16px;
-    color: $color-blackened;
-}
-
-.fonts--margin{
+    font-weight: 400;
+    color: $color-blackened; 
     margin: 15px 0;
 }
 
-.fonts--size{
-    font-size: 45px;
+.menu--under{
+        width: 11%;
+        line-height: 40px;
+        border-bottom: 3px solid #99E2D0;
 }
 
-.fonts--weight{
-    font-weight: 400;
+h4{
+    margin: 0 0 8px 0;
+}
+
+p{
+    font-size: 16px;
     color: $color-blackened;
-    margin: 12px 0;
+    margin: 0;
 }
 
 .fonts--bold{
@@ -58,18 +56,6 @@ p{
 a{  
     text-decoration: none;
     color: $color-blackened;
-}
-
-.menu--fonts{
-    font-size: 45px;
-    font-weight: 400;
-    color: $color-blackened;
-}
-
-.menu--under{
-    width: 13%;
-    line-height: 100px;
-    border-bottom: 8px solid $color-tertiary;
 }
 
 .loader-typo{
