--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -19,12 +19,12 @@
 .plate{
     display: flex;
     justify-content: space-between;
-    height: 150px;
-    padding: 25px;
-    margin-bottom: 50px;
-    border-radius: 60px;
+    height: 50px;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 15px;
     background-color: white;
-    box-shadow: 0 5px 25px 0 rgb($color-blackened, 0.2);
+    box-shadow: 0 1px 5px 0 rgb($color-blackened, 0.2);
     cursor: pointer;
     .plate-details{
         width: 100%;
@@ -44,11 +44,12 @@
         }
         .plate__price{
             width: 20%;
-            padding-left: 25px;
+            //padding-left: 25px;
             position: relative;
             p{
+                font-weight: 700;
                 position: absolute;
-                bottom: 0; right: -9px;
+                bottom: 0; right: 0;
             }
         }
     }
@@ -57,9 +58,9 @@
     }
     &:hover{
         .plate__valid{
-            width: 20%;
-            border-radius: 0 60px 60px 0;
-            margin: -25px -25px -25px 20px;
+            width: 2%;
+            border-radius: 0 15px 15px 0;
+            margin: -10px -10px -10px 15px;
             background-color: rgba($color-tertiary, 1);
             display: flex;
             justify-content: center;
