--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,4 +62,8 @@ a{
     font-family: 'Shrikhand', cursive, Impact, Arial, Helvetica, Verdana;
     color:white;
     font-size: 44px;
-  }
+}
+
+.margin-bot{
+    margin-bottom: 20px
+}
