--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,10 @@ a {
   font-size: 44px;
 }
 
+.margin-bot {
+  margin-bottom: 20px;
+}
+
 header {
   width: 100%;
   height: 50px;
@@ -82,7 +86,7 @@ header img {
 .arrow--position {
   position: absolute;
   left: 20px;
-  top: 15px;
+  top: 32px;
 }
 
 body {
@@ -253,7 +257,7 @@ section.command {
   vertical-align: middle;
 }
 section.command button {
-  padding: 30px 100px;
+  padding: 20px 50px;
   margin: 0 0 75px;
 }
 
@@ -511,15 +515,16 @@ p.place-restaurant {
   overflow: hidden;
 }
 .plate .plate-details .plate__txt {
-  max-width: 88%;
+  max-width: 85%;
   padding: 5px;
 }
-.plate .plate-details .plate__txt p {
+.plate .plate-details .plate__txt p, .plate .plate-details .plate__txt h4 {
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .plate .plate-details .plate__price {
   width: 20%;
+  margin-left: 10px;
   position: relative;
 }
 .plate .plate-details .plate__price p {
