--- a/sass/composants/_section.scss
+++ b/sass/composants/_section.scss
@@ -1,13 +1,20 @@
 #reserve{
         padding: 50px 40px;
-        background-color: #F6F6F6;
+        background-color: $color-whitened;
 
     @include to-tablet{
-        background-color: red;
+        justify-content: center;
+        align-items: center;
+        border-top-left-radius: 45px;
+        border-top-right-radius: 45px;
     }
 
     @include to-desktop{
-        background-color: blue;
+        width: 40%;
+        margin: 0 auto 25px auto;
+        justify-content: center;
+        border-radius: 45px;
+        box-shadow: 1px 5px 15px 0px rgb($color-blackened, 0.3);
     }
 }
 
@@ -29,9 +36,21 @@
     transform: translate(0, -50px);
 }
 
+#foncton{
+    @include to-desktop{
+        border-top-left-radius: 45px;
+        border-top-right-radius: 45px;
+    }
+}
+
 .fonctionnement{
     display: flex;
     flex-direction: column;
+
+    @include to-desktop{
+        border-top-left-radius: 45px;
+        border-top-right-radius: 45px;
+    }
 }
 
 #restaurants{
