--- a/sass/composants/_sticker.scss
+++ b/sass/composants/_sticker.scss
@@ -17,6 +17,10 @@
         border-radius: 15px;
         box-shadow: 1px 5px 15px 0px rgb($color-blackened, 0.3);
         font-size: 16px;
+        @include to-tablet{
+            margin-left: 10px;
+            margin-right: 10px;
+        }
     }
 
     .sticker--backGrey {
