--- a/sass/composants/_plates.scss
+++ b/sass/composants/_plates.scss
@@ -14,6 +14,10 @@
     :nth-child(4){
         animation: unfold 3s 1.9s forwards;
     }
+    @include tablet{
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
 }
 
 .plate{
@@ -74,7 +78,9 @@
             }
         }
     }
-    
+    @include tablet{
+        width: 30%;
+    }
 
 }
 
