--- a/sass/composants/_sticker.scss
+++ b/sass/composants/_sticker.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 0px;
-    @include to-tablet{
+    @include tablet{
         flex-direction: row;
         justify-content: space-around;
         margin-top: 40px;
@@ -17,7 +17,7 @@
         border-radius: 15px;
         box-shadow: 1px 5px 15px 0px rgb($color-blackened, 0.3);
         font-size: 16px;
-        @include to-tablet{
+        @include tablet{
             margin-left: 10px;
             margin-right: 10px;
         }
